# kerststal-2025

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  button_handler.hpp  idf_component.yml  main.cpp  util.hpp  wifi_connect.cpp
main/actuators/: dfplayer.hpp  lights.hpp  motor.hpp  motors.hpp
main/scenes/: beuk_de_ballen_scene.hpp  herdertjesScene.hpp  herdertjes_scene.hpp  scene.hpp  scene_handler.hpp  zakske_scene.hpp
main/web/: mqtt_client.hpp  web_server.hpp
